--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -39,8 +39,8 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
           </svg> -->
             <p class="mt-1 ">
-              <mat-icon  *ngIf="notifications == null">notifications</mat-icon>
-              <mat-icon *ngIf="notifications != null" matBadge="{{ notifications.length }}">notifications</mat-icon>
+              <mat-icon  *ngIf="notifications == null || notifications.length == 0">notifications</mat-icon>
+              <mat-icon *ngIf="notifications != null && notifications.length > 0" matBadge="{{ notifications.length }}">notifications</mat-icon>
             </p>
           </button>
           <div id="menu-notifications"
@@ -65,16 +65,18 @@
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
                 </p>
-                <button *ngIf="notification.typeNotification == 2"
-                  (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)"><i
-                    class="fas fa-check-circle text-green"></i>Aceptar</button>
-                <button *ngIf="notification.typeNotification == 2"
-                  (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)"><i
-                    class="fas fa-times-circle text-red"></i>Rechazar</button>
-                <button *ngIf="notification.typeNotification != 2" (click)="notificationRead(notification.id, i)"><i
-                    class="fas fa-times inline-block"></i>Leído</button>
-                <button *ngIf="notification.typeNotification != 2" (click)="removeNotification(notification.id, i)"><i
-                    class="fas fa-times inline-block"></i>Borrar</button>
+                <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
+                (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)">
+                  <i class="fas fa-check-circle text-green-600 hover:text-green-400"></i>Aceptar</button>
+                <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
+                (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)">
+                  <i class="fas fa-times-circle text-red-700 hover:text-red-500"></i>Rechazar</button>
+                <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
+                (click)="notificationRead(notification.id, i)">
+                  <i class="fas fa-eye hover:text-gray-500"></i>Leído</button>
+                <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
+                (click)="removeNotification(notification.id, i)">
+                  <i class="fas fa-trash-alt text-red-700 hover:text-red-500"></i>Borrar</button>
               </div>
             </div>
             <a href="#" class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
@@ -109,12 +111,12 @@
             <!-- TODO:  Hacer que solo los seguidores puedan ver tus publicaciones -->
           </div>
         </div>
-        <ul class="flex items-center">
+        <ul class="flex items-center " style="height: 86px;" (click)="toggleMenuProfile()">
           <div class="ml-4 text-black">
             {{ user.name }} {{ user.surname1 }}
           </div>
           <div class="ml-3 relative">
-            <div (click)="toggleMenuProfile()">
+            <div>
               <button mat-icon-button class="bg-gray-800 flex text-sm rounded-full focus:outline-none" id="user-menu" aria-haspopup="true">
                 <span class="sr-only">Open user menu</span>
                 <img class="rounded-full" src="{{ user.imgAvatar }}" alt="imgAvatar">
@@ -123,13 +125,14 @@
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1
             bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu"
               aria-orientation="vertical" aria-labelledby="user-menu">
-              <a routerLink="/user/{{ id }}/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
-              text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
-              <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
-              text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
-              <a class="block px-4 py-2 text-sm
-              text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logoutAlert()"><i
-                  class="fas fa-sign-out-alt mr-3"></i>Cerrar sesión</a>
+              <a routerLink="/user/{{ id }}/profile" (click)="toggleMenuProfile()" class="px-4 py-2 text-sm relative flex flex-row items-center h-11 focus:outline-none
+              border-l-4 border-transparent hover:border-blue-500 pr-6 text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
+              <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()"
+              class="px-4 py-2 text-sm relative flex flex-row items-center h-11 focus:outline-none border-l-4 border-transparent
+              hover:border-blue-500 text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
+              <a class="px-4 py-2 text-sm relative flex flex-row items-center h-11 focus:outline-none border-l-4 border-transparent
+               hover:border-red-500 pr-6 text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logoutAlert()">
+              <i class="fas fa-sign-out-alt mr-3 text-red-500"></i>Cerrar sesión</a>
             </div>
           </div>
         </ul>
