--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -59,7 +59,7 @@
       </div>
     </nav>
   </div>
-  <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
+  <div class="flex flex-col min-w-0 flex-1 overflow-hidden bg-gray-100">
     <div class="flex-1 relative z-0 flex overflow-hidden">
       <main class="flex-1 relative z-0 focus:outline-none xl:order-last" tabindex="0">
         <article>
@@ -207,20 +207,18 @@
           </div>
           <!--  TODO: Añadir estilos -->
           <div *ngIf="publications == null">
-            Todavía no ha realizado ninguna publicación
+            <p>Todavía no ha realizado ninguna publicación</p>
           </div>
 
           <div *ngIf="publications != null">
             <div *ngFor="let publication of publications; index as i;">
-              <mat-card style="max-width: 980px; margin-left: auto; margin-right: auto; margin-top: 20px">
+              <mat-card style="max-width: 980px; margin-left: auto; margin-right: auto; margin-top: 10px; margin-bottom: 20px;">
                 <mat-card-subtitle *ngIf="publication.isEdited == 0">{{ publication.upload_date }}</mat-card-subtitle>
                 <mat-card-subtitle *ngIf="publication.isEdited == 1">{{ publication.upload_date }} (editada)
                 </mat-card-subtitle>
                 <mat-card-content>
                   <p>
-                    The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                    A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                    bred for hunting.
+                    {{ publication.bodyPublication }}
                   </p>
                 </mat-card-content>
                 <div id="carousel{{publication.id}}" class="carousel slide" data-ride="carousel">
@@ -298,95 +296,6 @@
                   </div>
                 </mat-card-actions>
               </mat-card>
-            </div>
-          </div>
-          <div *ngIf="publications != null">
-            <div class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7" style="margin-top:-31px;">
-              <ul class="space-y-4" *ngFor="let publication of publications; index as i;">
-                <li class="bg-white px-4 py-6 shadow sm:p-6 sm:rounded-lg">
-                  <article class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <div>
-                      <div class="flex space-x-3">
-                        <div class="min-w-0 flex-1 mb-3">
-                          <p class="text-sm text-gray-500 mt-4 inline-block">
-                            <span *ngIf="publication.isEdited == 0" class="hover:underline">{{ publication.upload_date
-                              }}</span>
-                            <span *ngIf="publication.isEdited == 1" class="hover:underline">{{ publication.upload_date
-                              }} (editada)</span>
-                          </p>
-                          <div class="inline-block float-right mt-3" *ngIf="isMyProfile">
-                            <button class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
-                          hover:bg-gray-50 hover:text-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500
-                            mr-2" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
-                              <i class="fas fa-edit fa-lg text-blue-500 hover:text-blue-600"></i> Editar
-                            </button>
-                            <button
-                              class="inline-block py-1 px-3 border border-gray-300 rounded-md shadow-sm justify-center text-sm font-medium text-gray-700
-                          hover:bg-gray-50 focus:outline-none hover:text-red-500 focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500"
-                              *ngIf="isMyProfile" (click)="deletingAnimation(i);">
-                              <i class="fas fa-trash-alt fa-lg text-red-700 hover:text-red-500 mr-1"></i> Eliminar
-                            </button>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="mt-2 text-sm text-gray-700 space-y-4">
-                        <p>{{ publication.bodyPublication }}</p>
-                      </div>
-                      <div class="mt-6 flex justify-between space-x-8">
-                        <div class="flex space-x-6">
-                          <div *ngFor="let img of publication.imgsPublication; index as i;">
-                            <div *ngIf="publication.imgsPublication != null">
-                              <!--   TODO: permitir inline-block, limitar los border de las publicaciones -->
-                              <img src="http://localhost:81/assets/img/{{ img.imgPublication }}" style="float: left;
-                            width:  500px;
-                            height: 500px;
-                            object-fit: contain;">
-                            </div>
-                          </div>
-                          <span class="inline-flex items-center text-sm">
-                            <!--TODO: Button de like del perfil propio, para ver los que le han dado like, falta implementarlo-->
-                            <div *ngIf="isMyProfile">
-                              <button mat-icon-button id="{{i + 'likeIcon'}}"
-                                class="inline-block text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
-                                <mat-icon class="text-gray-400 hover:text-gray-500">favorite</mat-icon>
-                              </button>
-                              <span class="font-medium text-gray-900 ml-2">{{ publication.n_likes }}</span>
-                              <span class="sr-only">likes</span>
-                            </div>
-
-                            <div *ngIf="!isMyProfile">
-                              <button mat-icon-button (click)="updateLikeStatus(i)" id="{{i + 'likeIcon'}}"
-                                class="text-gray-400 hover:text-gray-500 outline-none focus:outline-none">
-                                <mat-icon>favorite</mat-icon>
-                              </button>
-                              <span class="font-medium text-gray-900 ml-2">{{ publication.n_likes }}</span>
-                              <span class="sr-only">likes</span>
-                            </div>
-                          </span>
-                          <span class="inline-flex items-center text-sm">
-                            <button
-                              routerLink="/user/{{ publication.user.id }}/publication/{{ publication.id }}/comments"
-                              class="inline-flex space-x-2 text-gray-400 hover:text-gray-500 focus:outline-none">
-                              <svg class="h-7 w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd"
-                                  d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
-                                  clip-rule="evenodd" />
-                              </svg>
-                            </button>
-                            <span class="font-medium text-gray-900 ml-2">{{ publication.n_comments }}</span>
-                            <span class="sr-only">replies</span>
-                          </span>
-                          <span>
-
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </li>
-              </ul>
             </div>
           </div>
         </article>
