--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -174,6 +174,13 @@
                   class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                   <i class="fas fa-times-circle"></i>
                   Contraseña no válida.
+                  <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showPasswordHint()" (mouseleave)="showPasswordHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+                  <div *ngIf="showingPasswordHint" id="passwordHint">
+                    Requisitos: <br>
+                    - Longitud mínima de 8 carácteres. <br>
+                    - Longitud máxima de 20 carácteres. <br>
+                    - Debe tener 1 número, 1 mayúscula y 1 minúscula.
+                  </div>
                 </div>
               </div>
 
