--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -127,9 +127,22 @@
                   </label>
                   <div class="mt-1 rounded-md shadow-sm flex">
                     <input #inputUsername="ngModel" [(ngModel)]="username" type="text" name="username" id="username"
-                      autocomplete="username"
+                      autocomplete="username" pattern="^[a-z0-9_ ]{5,20}$"
                       class="focus:ring-light-blue-500 focus:border-light-blue-500 flex-grow block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300"
                       value="{{ username }}">
+                      <!-- <div [hidden]="inputUsername.length == 0" class="inline-block ml-2 hover:text-red-500"> Se requiere un nombre de usuario. </div> <br/>
+                      <div [hidden]="inputUsername.invalid"
+                        class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                        <i class="fas fa-times-circle"></i>
+                        Nombre de usuario no válido.
+                        <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showUsernameHint()" (mouseleave)="showUsernameHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+                        <div *ngIf="showingUsernameHint" id="usernameHint">
+                          Requisitos: <br>
+                          - Longitud mínima de 5 carácteres. <br>
+                          - Longitud máxima de 20 carácteres. <br>
+                          - Solo se permiten números, letras y _.
+                        </div>
+                      </div> -->
                   </div>
                 </div>
 
